# APIcord

./: .env.example  LICENSE  README.md  bot.py  changes.txt  install_n_run.sh  keep_alive.py  motd.txt  pyproject.toml  requeriments.txt  requirements.txt
static/css/: redefault.min.css  style.css
static/css/bootstrap/: README
static/js/: lang.js
templates/: index.html  privacy.html
templates/errors/: 404.html  500.html
