[tool.poetry]
name = "APIcord Discord"
version = "0.0.0.3"
description = "Discord bot"
authors = ["absucc"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
#cairosvg = "^2.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
