[tool.poetry]
name = "APIcord"
version = "0.0.3.1.2"
description = "bot"
authors = ["absucc"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"
discord = "^1.0.1"
flask = "^1.1.2"
urllib3 = "^1.26.2"
google-trans-new = "^1.1.9"
mcstatus = "^5.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
